--- a/react-app-pet/src/style/App.scss
+++ b/react-app-pet/src/style/App.scss
@@ -7,13 +7,21 @@ body{
     background-attachment: fixed;
 
     hr{
-        border: 4px dotted rgba(255, 255, 255, 0.5);
+        border: 0;
+        border-top: 8px dotted rgba(255, 255, 255, 0.5);
         width: 50%;
         margin: 0;
     }
 
     h1{
         margin: 0;
+        color: #fff;
+        font-size: 64px;
+        text-shadow:
+                -3px -3px 0 #000,  
+                 3px -3px 0 #000,
+                -3px  3px 0 #000,
+                 3px  3px 0 #000;
     }
 
     input{
@@ -30,5 +38,11 @@ body{
         flex-direction: column;
         align-items: center;
         border-radius: 20px;
+        div.card-grid{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            
+        }
     }
 }
